[gd_scene load_steps=9 format=3 uid="uid://7dj84y4871ep"]

[ext_resource type="Script" path="res://buildings/TreasureChest.gd" id="1_cro6v"]
[ext_resource type="PackedScene" uid="uid://cjfhkhgaydhv6" path="res://models/treasure/treasure1.glb" id="2_6vlkn"]
[ext_resource type="Resource" uid="uid://by738w6rmb8q4" path="res://observables/on_treasure_chest_clicked.tres" id="2_80ngb"]
[ext_resource type="Script" path="res://units/components/HeightComponent.gd" id="2_n6sa0"]
[ext_resource type="PackedScene" uid="uid://eb0efdgoaofr" path="res://models/treasure/treasure2.glb" id="3_abksv"]
[ext_resource type="PackedScene" uid="uid://mmkjec56uraw" path="res://models/treasure/treasure3.glb" id="4_jrkyc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_smidq"]
radius = 3.0

[sub_resource type="SphereShape3D" id="SphereShape3D_a2iur"]
radius = 2.0

[node name="TreasureChest" type="Node3D" node_paths=PackedStringArray("treasure_models")]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)
script = ExtResource("1_cro6v")
treasure_models = [NodePath("Model/Scale/treasure0"), NodePath("Model/Scale/treasure1"), NodePath("Model/Scale/treasure2")]
on_treasure_chest_clicked_resource = ExtResource("2_80ngb")

[node name="Model" type="Node3D" parent="."]
script = ExtResource("2_n6sa0")
offset = -0.5
once = true

[node name="Scale" type="Node3D" parent="Model"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)

[node name="treasure0" parent="Model/Scale" instance=ExtResource("2_6vlkn")]

[node name="treasure1" parent="Model/Scale" instance=ExtResource("3_abksv")]
visible = false

[node name="treasure2" parent="Model/Scale" instance=ExtResource("4_jrkyc")]
visible = false

[node name="Area3D" type="Area3D" parent="Model/Scale"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33333, 0)
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Model/Scale/Area3D"]
shape = SubResource("SphereShape3D_smidq")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("SphereShape3D_a2iur")

[connection signal="input_event" from="Model/Scale/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Model/Scale/Area3D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Model/Scale/Area3D" to="." method="_on_mouse_exited"]
